Fixed button alignment.

--- a/app/styles/details.css
+++ b/app/styles/details.css
@@ -56,6 +56,10 @@
   display: block;
   margin: 5px 20px 5px 0px;
 }
+#details .accordion-button{
+  float: right;
+  align-self:flex-end;
+}
 
 
 a:focus {
